<resources>
    <string name="app_name">ShoeStore</string>
    <string name="signup_btn_label">SIGN UP</string>
    <string name="signin_btn_label">SIGN IN</string>
    <string name="email_text_label">EMAIL</string>
    <string name="password_text_label">PASSWORD</string>
    <string name="email_hint">Please enter your email to sign in.</string>
    <string name="password_hint">Please enter password to sign in.</string>
    <string name="layout_login_behavior">LOGIN</string>
    <string name="welcome_text_title">Welcome to ShoeStore!</string>
    <string name="welcome_text_content">Thank you very much for using ShoeStore.</string>
    <string name="go_instruction_btn_label">Go To Instruction</string>
    <string name="instruction_text_title">Please read Instruction before proceed!</string>
    <string name="instruction_text_content">Here is the Instruction to use this App.</string>
    <string name="go_shoelist_btn_label">GO SHOE LIST</string>
    <string name="shoe_list_title">Shoe Items</string>
    <string name="shoe_items_text">Shoe Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_detail_title">Shoe Detail</string>
    <string name="shoe_name_text_label">Name</string>
    <string name="shoe_company_text_label">Company</string>
    <string name="shoe_size_text_label">Shoe Size</string>
    <string name="shoe_description_text_label">Description</string>
    <string name="cancel_btn_label">CANCEL</string>
    <string name="save_btn_label">SAVE</string>
    <string name="shoe_name_hint">Please Enter Shoe Name.</string>
    <string name="shoe_company_hint">Please Enter Shoe Company.</string>
    <string name="shoe_size_hint">Please Enter Shoe Size.</string>
    <string name="shoe_description_content">Please Enter Shoe Description.</string>
</resources>
