<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.instruction.InstructionFragment">

        <TextView
            android:id="@+id/instruction_title_text"
            style="@style/LabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/instruction_text_title"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction_content_text"
            style="@style/LabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_title_text" />

        <Button
            android:id="@+id/go_shoelist_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_marginBottom="160dp"
            android:text="@string/go_shoelist_btn_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_content_text"
            app:layout_constraintVertical_bias="0.027" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>